cros: No migration banner if user not allowed for ARC

Only show migration banner for the following user types:
- Users with Gaia account (regular and child users);
- AD users when ARC is allowed for AD users;

BUG=722602

Review-Url: https://codereview.chromium.org/2879393003
Cr-Commit-Position: refs/heads/master@{#472128}